--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -64,8 +64,10 @@
                 </li>
                 <li>
                     <%= link_to cart_path do %>
-                    <%= fa_icon "shopping-cart" %> My Cart (
-                    <%= cart.size %>)
+                    <%= fa_icon "shopping-cart" %>
+                    My Cart (
+                    <%= cart.size %>
+                    )
                     <% end %>
                 </li>
             </ul </div> </div> </nav>
