--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,13 +1,40 @@
 <section class="orders-show">
-
-  <header class="page-header">
-    <h1>Order #<%= @order.id %></h1>
-  </header>
-
-  <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
-  </div>
-
-  <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
-
+    <header class="page-header">
+        <h1>Order #
+            <%= @order.id %>
+        </h1>
+    </header>
+    <div class="panel panel-default items">
+        <h4>Thank you for your order!</h4>
+        <h6>An email has been sent to
+            <%= @order.email %>
+        </h6>
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th colspan="2">Product</th>
+                    <th>Unit Price</th>
+                    <th>Quantity</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% @line_items.each do |item| %>
+                <% puts Product.find(item[:product_id]) %>
+                <%= render 'layouts/item', product: Product.find(item[:product_id]), quantity: item[:quantity].to_i %>
+                <% end %>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th colspan="4">
+                        TOTAL:
+                    </th>
+                    <th>
+                        <%= @order.total_cents / 100.0 %>
+                    </th>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+    <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 </section>
