--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -32,7 +32,8 @@
     <div class="row">
         <div class="col-xs-12">
             <%= form_tag orders_path do %>
-            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="<%= Rails.configuration.stripe[:publishable_key] %>" data-amount="<%= cart_subtotal_cents %>" data-name="Jungle" data-description="Khurram Virani's Jungle Order" data-locale="auto" data-email="kvirani@gmail.com" data-currency="cad">
+            <% order_description = "#{current_user.first_name} #{current_user.last_name}'s Jungle Order" %>
+            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="<%= Rails.configuration.stripe[:publishable_key] %>" data-amount="<%= cart_subtotal_cents %>" data-name="Jungle" data-description="<%= order_description %>" data-locale="auto" data-email="<%= current_user.email %>" data-currency=" cad">
             </script>
             <% end %>
         </div>
