--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,6 +2,7 @@
     <header class="page-header">
         <h1>My Cart</h1>
     </header>
+    <% if enhanced_cart.length != 0 %>
     <div class="panel panel-default items">
         <table class="table table-bordered">
             <thead>
@@ -38,4 +39,12 @@
             <% end %>
         </div>
     </div>
+    <% else %>
+    <h3>&nbsp&nbspIt seems like your cart is empty. Try adding a few things in and try again!</h3>
+    <%= image_tag "empty-cart.png" %>
+    <br>
+    &nbsp&nbsp&nbsp&nbsp
+    <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
+    <br>
+    <% end %>
 </section>
