Review system implemented.

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -8,6 +8,10 @@
         <% end %>
     </header>
     <p class="description">
+        <% ratings = Review.where({product_id: product.id}) %>
+        <% printStars(averageReviews(ratings)) %>
+        <br>
+        <br>
         <%= product.description %>
     </p>
     <footer class="actions">
