--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -72,6 +72,10 @@ main section.categories-show {
                 }
             }
 
+            .badstars {
+                color: gainsboro;
+            }
+
         }
     }
 }
@@ -82,5 +86,27 @@ main section.products-show {
         img.main-img {
             max-width: 100%;
         }
+    }
+
+    .footer-box {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 8em;
+    }
+
+    .reviews-box {
+        max-width: 600px;
+    }
+
+    .review {
+        padding: 5px 0 2em 0;
+    }
+
+    .big-box {
+        width: 600px;
+    }
+
+    .badstars {
+        color: gainsboro;
     }
 }
