--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,31 +1,89 @@
 <section class="products-show">
-
-  <header class="page-header">
-    <h1><%= link_to @product.category.name, @product.category %> &raquo; <%= @product.name %></h1>
-  </header>
-
-  <article class="product-detail">
-
-    <div class="row">
-
-      <div class="col-sm-4">
-        <%= image_tag @product.image.url, class: 'main-img' %>
-      </div>
-
-      <div class="col-sm-8">
-        <dl class="dl-horizontal">
-          <dt>Name</dt>
-          <dd><%= @product.name %></dd>
-          <dt>Description</dt>
-          <dd><%= @product.description %></dd>
-          <dt>Quantity</dt>
-          <dd><%= @product.quantity %></dd>
-          <dt>Price</dt>
-          <dd><%= @product.price %></dd>
-        </dl>
-      </div>
-    </div>
-
-  </article>
-
+    <% def printStars (rating) %>
+    <% counter = 1 %>
+    <% while counter <= rating do %>
+    <% puts rating %>
+    <span class="goodstars">
+        <%= fa_icon "star" %> </span>
+    <% counter += 1 %>
+    <% end %>
+    <% while counter <= 5 do %>
+    <span class="badstars">
+        <%= fa_icon "star" %> </span>
+    <% counter += 1 %>
+    <% end %>
+    <% end %>
+    <% def averageReviews (reviews) %>
+    <% if reviews.length == 0 %>
+    <% return 0 %>
+    <% end %>
+    <% beginVar = 0 %>
+    <% reviews.each do |review| %>
+    <% beginVar += review.rating %>
+    <% end %>
+    <% return beginVar /= reviews.length %>
+    <% end %>
+    <header class="page-header">
+        <h1>
+            <%= link_to @product.category.name, @product.category %> &raquo;
+            <%= @product.name %>
+        </h1>
+    </header>
+    <article class="product-detail">
+        <div class="row">
+            <div class="col-sm-4">
+                <%= image_tag @product.image.url, class: 'main-img' %>
+            </div>
+            <div class="col-sm-8">
+                <dl class="dl-horizontal">
+                    <dt>Name</dt>
+                    <dd>
+                        <%= @product.name %>
+                    </dd>
+                    <dt>Review</dt>
+                    <dd>
+                        <% printStars(averageReviews(@reviews)) %>
+                    </dd>
+                    <dt>Description</dt>
+                    <dd>
+                        <%= @product.description %>
+                    </dd>
+                    <dt>Quantity</dt>
+                    <dd>
+                        <%= @product.quantity %>
+                    </dd>
+                    <dt>Price</dt>
+                    <dd>
+                        <%= @product.price %>
+                    </dd>
+                </dl>
+            </div>
+        </div>
+        <hr>
+        <div class="footer-box">
+            <div class="form-box">
+                <% if current_user %>
+                <%= form_for [@product, @review] do |form| %>
+                <div class="form-group">
+                    <%= form.label :rating %>
+                    <%= form.select :rating, options_for_select([["1 star", 1], ["2 stars", 2], ["3 stars", 3], ["4 stars", 4], ["5 stars", 5]]), include_blank: true , class: 'form-control' %>
+                </div>
+                <div class="form-group">
+                    <%= form.label :description, "Review: " %>
+                    <%= form.text_area :description, rows: "4", class: 'form-control' %>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <% end %>
+                <% end %>
+                <div class="big-box">
+                    <div class="reviews-box">
+                        <h3>Reviews: </h3>
+                        <% @reviews.reverse_order.each do |review| %>
+                        <%= render 'layouts/review', review: review%>
+                        <% end %>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
 </section>
